--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <!-- https://mvnrepository.com/artifact/junit/junit -->
   
   <dependencies>
+    
+    <dependency>
+   <groupId>org.seleniumhq.selenium</groupId>
+   <artifactId>selenium-java</artifactId>
+   <version>2.53.0</version>
+  </dependency>
+    
   <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
