--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <!-- https://mvnrepository.com/artifact/junit/junit -->
   
   <dependencies>
+    
+    <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+</dependency>
+    
   <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
