Add log4j to pom.xml, restructure README.md

--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.ka</groupId>
-	<artifactId>basic-project</artifactId>
+	<artifactId>auto-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Basic Project</name>
-	<description>Basic Project Structure</description>
+	<name>Automation Project</name>
+	<description>Project for creating automation tests using TestNG and Selenium.</description>
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
 
 	<dependencies>
@@ -21,6 +21,15 @@
 			<artifactId>testng</artifactId>
 			<version>6.9.10</version>
 		</dependency>
+		
+	
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+		
+		
 	</dependencies>
 
 	<build>
