--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.ka</groupId>
-	<artifactId>auto-project</artifactId>
+	<artifactId>location-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Automation Project</name>
+	<name>Locators Project</name>
 	<description>Project for creating automation tests using TestNG and Selenium.</description>
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
 
